# stakenet-simulator

./: CONSIDERATIONS.md  Cargo.toml  README.md
benchmark/: Cargo.toml
benchmark/src/: main.rs
services/cli/: cargo.toml
services/cli/src/: epoch_to_validator_history_entry.rs  error.rs  lib.rs  macros.rs  main.rs  steward_utils.rs  utils.rs
services/cli/src/commands/: backtest.rs
services/cli/src/domain/: cli.rs  config.rs  errors.rs  mod.rs
services/cli/src/utils/: backtest_rebalance.rs  rebalancing_simulator.rs  validator_stake_state.rs
services/epoch-rewards-tracker/: Cargo.toml
services/epoch-rewards-tracker/src/: cluster_history.rs  config.rs  fetch_active_stake.rs  fetch_inactive_stake.rs  inflation.rs  main.rs  priority_fees.rs  rpc_utils.rs  stake_accounts.rs  steward_utils.rs  validator_history.rs  validator_history_utils.rs
stakenet-simulator-db/: Cargo.toml
stakenet-simulator-db/src/: active_stake_jito_sol.rs  cluster_history.rs  cluster_history_entry.rs  epoch_priority_fees.rs  epoch_rewards.rs  inactive_stake_jito_sol.rs  inflation_rewards.rs  lib.rs  stake_accounts.rs  validator_history.rs  validator_history_entry.rs  withdraw_and_deposit_sol.rs  withdraw_and_deposits_stake.rs
supabase/migrations/: 20250706230832_create-initial-tables.sql
supabase/schemas/1_tables/: 002_validator_history_entry.sql  003_stake_accounts.sql  008_cluster_histories.sql
