[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json"]}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
solana-client = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "bigdecimal",
] }
steward-simulator-cli = { workspace = true }