[package]
name = "epoch-rewards-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = { workspace = true }
dotenvy = { workspace = true }
envy = "0.4.2"
serde = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
validator-history = { workspace = true }
